# minishell

./: CMakeLists.txt  Makefile  README.md  builtins.c  command_funcs.c  embedded.c  env_utils.c  env_utils_sorting.c  env_utils_val_ops.c  error.c  ft_cd.c  ft_cd_change.c  ft_cd_colons.c  ft_cd_try_dirs.c  ft_cd_utils.c  ft_echo.c  ft_env.c  ft_exec.c  ft_exec_conversations.c  ft_exec_exec.c  ft_exec_paths.c  ft_exec_paths_search.c  ft_exec_pipes_redir.c  ft_exec_pipes_utils.c  ft_exec_run_child.c  ft_exit.c  ft_expander.c  ft_expander_env_var.c  ft_expander_token_work.c  ft_export.c  ft_lexer.c  ft_lexer_states.c  ft_lexer_tokens.c  ft_lexer_tokens_utils.c  ft_parser.c  ft_parser_nodes.c  ft_parser_redirects.c  ft_parser_tokens.c  ft_pwd.c  ft_unset.c  (+6 more)
builtin/: ft_cd.c  ft_echo.c  ft_exit.c  ft_pwd.c  ft_unset.c
checker-21/: norminette.json
exec/: ft_command.c  ft_exec.c  ft_exec_command.c  ft_exec_paths.c  ft_exec_pipe.c  ft_exec_redirect.c
expander/: ft_expand_token.c  ft_expand_var.c  ft_expander.c
lexer/: ft_lexer.c  ft_lexer_general_state.c  ft_lexer_quote_state.c
minilibft/: ft_atoi.c  ft_isalnum.c  ft_isdigit.c  ft_itoa.c  ft_memcpy.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_substr.c
parser/: ft_node.c  ft_parser.c  ft_parser_utils.c  ft_print_node.c  ft_redirect.c
utils/: env.c  env_sort.c  env_utils.c  get_env.c
